--- a/hex.css
+++ b/hex.css
@@ -10,27 +10,27 @@
 }
 tr{
 	display:block;
-	margin-bottom:calc(var(--)/-4);
+	margin-bottom:calc(var(---)/-4);
 }
 td{
-	width:calc(var(--)*.866);
+	width:calc(var(---)*.866);
 	clip-path:polygon(-50%50%,50%0,150%50%,50%100%)
 }
 label:before,label:after{
 	content:'';
-	width:calc(var(--)/2);
-	height:calc(var(--)*.433);
+	width:calc(var(---)/2);
+	height:calc(var(---)*.433);
 	position:absolute;
 	margin:auto;
 	border-top:inherit;
 	border-left:inherit;
-	transform:translateY(calc(var(--)/4))rotate(-150deg)skew(-30deg)
+	transform:translateY(calc(var(---)/4))rotate(-150deg)skew(-30deg)
 }
 label:before{
-	transform:translateY(calc(var(--)/-4))rotate(30deg)skew(-30deg)
+	transform:translateY(calc(var(---)/-4))rotate(30deg)skew(-30deg)
 }
 tr:nth-child(even){
-	margin-left:calc(var(--)*.433)
+	margin-left:calc(var(---)*.433)
 }
 tr:nth-child(odd)>td:nth-child(3n-2),tr:nth-child(even)>td:nth-child(3n-1){
 	background-color:gray
